# trackmon

./: CMakeLists.txt  README  README.md  makefile
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindAIS.cmake  FindPCAP.cmake
data/: ais.tcpdump.2022-05-18.pcap  m2_berta.moos.p9000.pcap
scripts/: attach-dev-container.sh  build-dev-container.sh  run-dev-container.sh
src/: CMakeLists.txt  ingest.cpp  main.cpp  track-monitor-info.hpp  track-monitor.cpp  track-monitor.hpp
src/connectors/file/: pcap-file-connector.cpp  pcap-file-connector.hpp  text-file-connector.cpp  text-file-connector.hpp
src/core/: buffers.hpp  connection.hpp  connector.hpp  report.cpp  report.hpp  track-cache.cpp  track-cache.hpp  track.cpp  track.hpp
src/parsers/ais/: ais-parser.cpp  ais-parser.hpp  parser.cpp  parser.hpp
src/parsers/moos/: message-parser.cpp  message-parser.hpp  packet-parser.cpp  packet-parser.hpp
src/parsers/nmea0183/: packet-parser.cpp  packet-parser.hpp
src/readers/nmea-0183/: pcap-log-reader.cpp  pcap-log-reader.hpp  text-log-reader.cpp  text-log-reader.hpp
src/readers/nmea0183/: text-log-reader.cpp  text-log-reader.hpp
src/readers/pcap/: file-reader.cpp  file-reader.hpp  frame-buffer.hpp  log-reader.cpp  log-reader.hpp
src/ui/: curses-input-handler.cpp  curses-input-handler.hpp  curses-renderer.cpp  curses-renderer.hpp  display-column.cpp  display-column.hpp
src/ui/console/: renderer.cpp  renderer.hpp
src/ui/curses/: input-handler.cpp  input-handler.hpp  renderer.cpp  renderer.hpp
